<resources>
    <string name="app_name">米粉自助机</string>
    <string name="count_down">%1$d \'</string>
    <string name="radio_btn_left">面食</string>
    <string name="radio_btn_right">米粉</string>
    <string name="radio_btn_right_1">新鲜面</string>
    <string name="shopping_cart">购物车</string>

    <string name="error_obtain_order">获取订单失败</string>
    <string name="payment">付款</string>
    <string name="payment_total">共选中%1$d件商品   共计：%2$.2f 元</string>
    <string name="pay_error">鸡蛋拉面材料不足，无法制作，非常抱歉！</string>
    <string name="confirm">确定</string>
    <string name="pay_success_confirm">确定 %1$d \'</string>
    <string name="order_query_success">订单查询成功</string>
    <string name="meal_number">取餐号：%1$s</string>]
    <string name="order_amount">合计金额：%1$.2f 元</string>
    <string name="order_number">订单编号：%1$s</string>
    <string name="order_pay_data">付款时间：%1$s</string>
    <string name="order_confirm_hint">* 确认清单无误后，点击“确定”按钮开始制作</string>

    <string name="goods_title">已选商品</string>
    <string name="all_drawback">全部退款</string>
    <string name="start_make">部分退款，继续制作</string>
    <!--<string name="goods_error_hint">您所点的部分商品材料不足，无法制作，如需重新点餐请点击“全部退款”按钮</string>-->
    <string name="goods_error_hint">您所点的餐品食材不足，请选择部分退款继续制作，或全部退款</string>
    <string name="noodles_make_wait"><DATA><![CDATA[<font color="#2cba21"><big>%1$d</big></font>号制作中，请耐心等待...]]></DATA></string>
    <string name="noodles_make_waits"><DATA><![CDATA[<font color="#2cba21"><big>%1$d</big></font>号已添加到制作列表，请耐心等待...]]></DATA></string>
    <string name="noodles_make_competle"><DATA><![CDATA[<font color="#2cba21"><big>%1$d</big></font> 号的<font color="#2cba21"><big> %2$s</big></font> 制作完成,<br><br>请在一分钟内从取餐口取走]]></DATA></string>
    <string name="noodles_make_competle_all"><DATA><![CDATA[<font color="#2cba21"><big>%1$d</big></font> 号的订单已全部完成]]></DATA></string>
    <string name="complete_num">%1$d号制作完成</string>
    <string name="take_meal">做面需要一段时间，请您稍等！</string>
    <string name="desc_exception_tip">异常提示</string>
    <string name="desc_friend_tip">温馨提醒</string>
    <string name="desc_low_stocks">材料不足，无法制作</string>
    <string name="goods_name_desc">商品名称</string>
    <string name="order_desc">订单</string>
    <string name="goods_num_desc">数量</string>
    <string name="goods_sum_desc">金额</string>
    <string name="payment_confirm_hint">* 确认清单无误后，扫描右侧二维码支付</string>
    <string name="payment_sum">付款金额：%1$.2f 元</string>
    <string name="noodle_stock"><DATA><![CDATA[<font color="#2cba21"><big>%1$s</big></font> 的库存剩余<font color="#2cba21"><big> %2$d</big></font><br><br>请您重新选择]]></DATA></string>

    <string name="money_desc">¥%1$.2f</string>
    <string name="payment_success_num"><Data><![CDATA[你的排队序号为：<font color="#fd8500"><big>%1$.2f</big></font>号]]></Data></string>


    <string name="mch_no">机器编码：%1$s</string>
    <string name="lat">经度：%1$s</string>
    <string name="longt">纬度：%1$s</string>


    <string name="payment_confrim">确认支付</string>
    <string name="payment_success">支付成功!</string>
    <string name="weixinpay">微信支付</string>
    <string name="alipay">支付宝支付</string>


    <string name="understock"><Data><![CDATA[材料不足，正在补货中...,<br><br>选择全部退款或下次再来取餐]]></Data></string>
    <string name="part_understock"><Data><![CDATA[部分材料不足，继续制作点击确定,<br><br>材料不足的部分商品将退款]]></Data></string>
    <string name="return_back">订单款项将于24小时后退回您的账户，请注意查收</string>
    <!--<string name="return_back_kk"><Data><![CDATA[部分商品款项将于24小时后退回您的账户，请注意查收]]></Data></string>-->
    <string name="return_back_kk">部分商品款项将于24小时后退回您的账户，请注意查收</string>
    <string name="return_back_faile">退款失败,请联系客服电话020-38855366</string>
</resources>
